--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
-    # prefix: /api
+    prefix: /api
     # defaults:
     #     _format: json
